--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -1,7 +1,115 @@
 /* @unocss; */
 
+:root {
+  --vp-c-brand-1: #f06292;
+  --vp-c-brand-light: #ff94c2;
+  --vp-c-brand-dark: #ba2d65;
+  --vp-code-block-bg: #f6f8fa;
+  --vp-code-copy-code-bg: #dedede;
+  --vp-code-copy-code-hover-bg: #dedede;
+  --vp-c-text-dark-2: #8f8f8f;
+  --vp-c-text-dark-3: #8f8f8f;
+  --vp-sidebar-bg-color: var(--vp-c-bg);
+  --vp-custom-block-tip-border: transparent;
+  --vp-custom-block-tip-text: var(--vp-c-text-1);
+  --vp-nav-bg-color: color-mix(in srgb, var(--vp-c-bg) 95%, transparent);
+  --vp-custom-block-tip-bg: #ecfdf5;
+  --vp-custom-block-tip-border: #dcfce7;
+  --vp-custom-block-tip-text: #15803d;
+  --vp-c-brand-nav-active: color-mix(in srgb, var(--vp-c-brand-light) 15%, transparent 100%);
+  --vp-nav-logo-height: 28px;
+}
+.dark {
+  --vp-c-bg: #0f172a;
+  --vp-c-bg-alt: #111827;
+  --vp-c-bg-soft: #1e293b;
+  --vp-c-divider: #334155;
+  --vp-code-block-bg: #1e293b;
+  --vp-c-bg-alpha-with-backdrop: #1f2937bf;
+  --vp-code-copy-code-bg: #273345;
+  --vp-code-copy-code-hover-bg: #273345;
+  --vp-c-text-dark-2: #8a8a8a;
+  --vp-c-text-dark-3: #8a8a8a;
+  --vp-custom-block-tip-bg: #064e3b;
+  --vp-custom-block-tip-border: #052e16;
+  --vp-custom-block-tip-text: #f0fdf4;
+  --vp-c-brand-nav-active: color-mix(in srgb, var(--vp-c-brand-dark) 30%, transparent 100%);
+}
+
 
 html {
   font-family: Arial, Helvetica;
 }
 
+.link {
+  text-decoration: none !important;
+}
+
+.VPNavBarTitle.has-sidebar .title {
+  border: 0;
+}
+
+.dark #VPSidebarNav > .group:nth-child(-n + 8):not(:first-child) > .VPSidebarItem > .item > .text::before {
+  filter: invert(1);
+}
+
+/* #VPSidebarNav > .group > .VPSidebarItem > .item > .text::before {
+  @apply mr-2 block w-4 h-4 bg-cover;
+  content: "";
+} */
+
+#VPSidebarNav > .group {
+  @apply border-t-0;
+
+  & > .VPSidebarItem {
+      @apply pb-1;
+
+      & > .item > .text {
+          @apply flex items-center text-base py-1.5
+      }
+
+      & > .items {
+          & > .VPSidebarItem {
+              @apply pl-4 border-l dark:border-l-gray-600 rounded-none transition-all duration-150 ease-out;
+
+              /* Separation between nested table of content */
+              &:not(.collapsible), &.collapsible > .items > .VPSidebarItem {
+                  &:hover, &:focus, &.is-active.has-active {
+                      @apply rounded-lg border-transparent;
+
+                      background-color: var(--vp-c-brand-nav-active);
+
+                      & > .item > .indicator {
+                          background-color: var(--vp-c-brand-1);
+                      }
+                  }
+              }
+
+              &.collapsible {
+                  & > .items {
+                      @apply border-0 pl-0;
+
+                      & > .VPSidebarItem {
+                          /* @apply border-l pl-4 dark:border-l-gray-600; */
+                          /* border-left: 1px solid var(--vp-c-brand-dark); */
+                          border-left: 1px;
+                          border-color: var(--vp-c-brand-dark);
+                      }
+
+                      & > .caret {
+                          &:hover, &:focus {
+                              background-color: transparent;
+                          }
+                      }
+                  }
+              }
+          }
+      }
+  }
+}
+
+/* #VPSidebarNav { */
+  /* @apply text-center my-0 font-medium ;  */
+
+  /* background-color: red; */
+/* } */
